--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
           <p>
-            <a href="https://pragprog.com/book/pplearn">
+            <a href="/">
               <img src="pplearn.jpg" width="200" align="left" style="margin-right: 20px;"/>
             </a>
             <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
